[project]
name = "dblp-norm"
version = "0.1.0"
description = "Normalise BibTeX entries by querying the DBLP database"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "bibtexparser>=1.4.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.12.2",
    "pypdf>=3.0.0",
]

[project.scripts]
dblp-norm = "dblp_norm:main"
dblp-from-pdf = "dblp_from_pdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
